Fix layout bugs

--- a/less/pmp.less
+++ b/less/pmp.less
@@ -368,7 +368,10 @@
   .general-screen();
   height: 1750px;
   .media-md({
-    height: 850px;
+    height: 800px;
+  });
+  .media-lg({
+    height: 900px;
   });
   padding-bottom: 1rem;
 
